--- a/src/styles/scss.scss
+++ b/src/styles/scss.scss
@@ -1,941 +1,3 @@
-// <МИКСИНЫ>
-@mixin anim($time, $delay) {
-  -webkit-transition: all $time ease $delay;
-  -moz-transition: all $time ease $delay;
-  -ms-transition: all $time ease $delay;
-  -o-transition: all $time ease $delay;
-  transition: all $time ease $delay;
-}
-@mixin scale($num) {
-  -moz-transform: scale($num);
-  -ms-transform: scale($num);
-  -webkit-transform: scale($num);
-  -o-transform: scale($num);
-  transform: scale($num);
-}
-@mixin rotate($deg) {
-  -moz-transform: rotate($deg);
-  -ms-transform: rotate($deg);
-  -webkit-transform: rotate($deg);
-  -o-transform: rotate($deg);
-  transform: rotate($deg);
-}
-@mixin flexbox() {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  font-size: 0;
-}
-@mixin flexorder($val) {
-  -webkit-box-ordinal-group: $val;
-  -moz-box-ordinal-group: $val;
-  -ms-flex-order: $val;
-  -webkit-order: $val;
-  order: $val;
-}
-// </МИКСИНЫ>
-
-// <ПЕРЕМЕННЫЕ>
-$minwidth: 320px;
-$mw: 1920;
-$md1: $mw + 12;
-$md2: 1200;
-$md3: 767.98;
-$md4: 520;
-// </ПЕРЕМЕННЫЕ>
-
-//<Шрифт по умолчанию>
-$fontfamily: "Century Gothic";
-//</Шрифт по умолчанию>
-
-//<ОБНУЛЕНИЕ, ОБЩИЕ ПАРАМЕТРЫ>
-* {
-  padding: 0px;
-  margin: 0px;
-  border: 0px;
-}
-*,
-*:before,
-*:after {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-:focus,
-:active {
-  outline: none;
-}
-a:focus,
-a:active {
-  outline: none;
-}
-aside,
-nav,
-footer,
-header,
-section {
-  display: block;
-}
-html,
-body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  min-width: $minwidth;
-  position: relative;
-  width: 100%;
-  color: #000;
-}
-body {
-  font-size: 100%;
-  line-height: 1;
-  font-size: 14px;
-  font-family: $fontfamily;
-  -ms-text-size-adjust: 100%;
-  -moz-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-  &.lock {
-    overflow: hidden;
-    @media (max-width: $md3+px) {
-      width: 100%;
-      position: fixed;
-      overflow: hidden;
-    }
-  }
-}
-input,
-button,
-textarea {
-  font-family: $fontfamily;
-}
-input::-ms-clear {
-  display: none;
-}
-button {
-  cursor: pointer;
-}
-button::-moz-focus-inner {
-  padding: 0;
-  border: 0;
-}
-a,
-a:visited {
-  text-decoration: none;
-}
-a:hover {
-  text-decoration: none;
-  cursor: pointer;
-}
-ul li {
-  list-style: none;
-}
-img {
-  vertical-align: top;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: inherit;
-  font-size: inherit;
-}
-//</ОБНУЛЕНИЕ, ОБЩИЕ ПАРАМЕТРЫ>
-
-//<ОСНОВНАЯ СЕТКА>
-.wrapper {
-  width: 100%;
-  min-height: 100%;
-  overflow: hidden;
-}
-.container {
-  max-width: $mw + px;
-  margin: 0 15%;
-  width: 100%;
-  @media (max-width: $md1+px) {
-    max-width: 1371px;
-  }
-  @media (max-width: $md2+px) {
-    max-width: 750px;
-  }
-  @media (max-width: $md3+px) {
-    max-width: none;
-    padding: 0 10px;
-  }
-}
-//</ОСНОВНАЯ СЕТКА>
-
-// <HEADER>
-.header-top {
-  &__logo {
-    position: relative;
-    top: 26px;
-  }
-  &__buttons {
-    height: 94px;
-    display: flex;
-    flex-direction: column;
-    margin: 13px 0 0 0;
-    @media (max-width: $md3+px) {
-      flex-direction: row;
-      align-items: center;
-    }
-  }
-  &__callback {
-    width: 216px;
-    height: 32px;
-    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.05);
-    border-radius: 8px;
-    background-color: #019ec4;
-    color: #ffffff;
-    font-size: 13px;
-    text-transform: uppercase;
-    margin: 0 0 14px 0;
-    @include anim(0.3s, 0s);
-    &:hover {
-      @include anim(0.3s, 0s);
-      background-color: #fff;
-      border: 1px solid #019ec4;
-      color: #019ec4;
-    }
-    @media (max-width: $md3+px) {
-      margin: 0;
-      width: 182px;
-    }
-    @media (max-width: $md4+px) {
-      display: none;
-    }
-    &.active {
-      display: none;
-
-      @media (max-width: $md3+px) {
-        display: block;
-        width: 100%;
-        margin: 0 0 46px 0;
-      }
-    }
-  }
-  &__buttons-bottom {
-    display: flex;
-    justify-content: space-between;
-    @media (max-width: $md3+px) {
-      order: -1;
-      margin: 0 16px 0 0;
-    }
-    @media (max-width: $md4+px) {
-      flex-direction: column;
-      margin: 0 0 10px 0;
-    }
-  }
-  &__enter {
-    width: 98px;
-    height: 32px;
-    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.05);
-    border-radius: 8px;
-    background-color: #ffffff;
-    color: #5a5a5a;
-    font-size: 13px;
-    text-transform: uppercase;
-    line-height: 20px;
-    @include anim(0.3s, 0s);
-    &:hover {
-      background-color: #019ec4;
-      color: #fff;
-    }
-    img {
-      margin: 0 0 0 -6px;
-    }
-    @media (max-width: $md3+px) {
-      width: 34px;
-      height: 32px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin: 0 16px 0 0;
-      img {
-        margin: 0;
-      }
-    }
-    @media (max-width: $md4+px) {
-      width: 77px;
-      height: 25px;
-      margin: 0 0 10px 0;
-    }
-
-    span {
-      display: inline-block;
-      @media (max-width: $md3+px) {
-        display: none;
-      }
-      @media (max-width: $md4+px) {
-        display: inline;
-        color: #707070;
-        font-size: 10px;
-        margin: 0 0 0 5px;
-      }
-    }
-  }
-  &__basket {
-    width: 98px;
-    height: 32px;
-    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.05);
-    border-radius: 8px;
-    background-color: #ffffff;
-    @include anim(0.3s, 0s);
-    &:hover {
-      @include anim(0.3s, 0s);
-      background-color: #019ec4;
-      color: #fff;
-      .header-top__basket-counter {
-        @include anim(0.3s, 0s);
-        div {
-          @include anim(0.3s, 0s);
-          background-color: #fff;
-          span {
-            @include anim(0.3s, 0s);
-            color: #019ec4;
-          }
-        }
-      }
-    }
-    @media (max-width: $md3+px) {
-      width: 69px;
-    }
-    @media (max-width: $md4+px) {
-      width: 76px;
-      height: 24px;
-    }
-  }
-  &__basket-counter {
-    display: inline-block;
-    background: url(../assets/icons/08.svg) left no-repeat;
-    padding: 0 0 0 24px;
-
-    div {
-      display: flex;
-      width: 19px;
-      height: 19px;
-      background-color: #019ec4;
-      border-radius: 50%;
-      color: #ffffff;
-      font-size: 10px;
-      font-weight: 700;
-      text-transform: uppercase;
-      align-items: center;
-      justify-content: center;
-    }
-  }
-}
-.header-top {
-  &-container {
-    background: rgba(132, 132, 132, 0.05);
-  }
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 130px;
-  max-width: 1395px;
-  padding: 0 12px;
-  width: 100%;
-  margin: 0 auto;
-  @media (max-width: $md3+px) {
-    height: 85px;
-  }
-}
-.water {
-  max-width: 300px;
-  width: 100%;
-  margin: 18px auto 0px 47px;
-  @media (max-width: $md3+px) {
-    margin: 18px auto 0 14px;
-  }
-  &__title {
-    color: #000000;
-    font-size: 18px;
-    line-height: 26px;
-    text-transform: uppercase;
-    margin: 0 0 20px 0;
-    letter-spacing: 2px;
-    @media (max-width: $md3+px) {
-      font-size: 14px;
-      max-width: 275px;
-      line-height: 21px;
-      margin: -7px 0 0 0;
-      letter-spacing: 1.5px;
-    }
-    @media (max-width: 560px) {
-      font-size: 12px;
-      letter-spacing: 1px;
-      line-height: 15px;
-    }
-  }
-  &__health {
-    color: #050505;
-    font-size: 13px;
-    text-transform: uppercase;
-    letter-spacing: 1.3px;
-    background-image: url(../assets/icons/01.svg);
-    background-repeat: no-repeat;
-    padding: 0 0 0 26px;
-    height: 16px;
-    @media (max-width: 1030px) {
-      display: none;
-    }
-  }
-}
-.contacts {
-  max-width: 704px;
-  width: 100%;
-  padding: 0 42px 0 0;
-  @media (max-width: $md3+px) {
-    display: none;
-  }
-  &__top {
-    display: flex;
-    margin: 3px 0 14px 0;
-    justify-content: space-between;
-
-    &-select {
-      display: flex;
-      align-items: center;
-      margin: 0 auto 0 0;
-      &.active {
-        display: none;
-        p {
-          color: #b0b0b0;
-          margin: 0 0 0 26px;
-          font-size: 12px;
-        }
-        div {
-          align-items: center;
-          display: flex;
-          margin: 0 0 25px 0;
-        }
-        @media (max-width: $md3+px) {
-          display: inline-block;
-        }
-      }
-      @media (max-width: 1030px) {
-        margin: 0 10px 0 auto;
-      }
-    }
-  }
-  &__mail {
-    color: #5a5a5a;
-    line-height: 24px;
-    background: url(../assets/icons/02.svg) left no-repeat;
-    padding: 0 0 0 20px;
-    margin: 0 auto 0;
-    @include anim(0.3s, 0s);
-    &:hover {
-      @include anim(0.3s, 0s);
-      color: #46b7d3;
-    }
-
-    @media (max-width: $md2+px) {
-      margin: 0 10px 0 0;
-    }
-    @media (max-width: $md3+px) {
-      display: block;
-      margin: 0 0 27px 0;
-    }
-    span {
-      @media (max-width: $md2+px) {
-        display: none;
-      }
-      &.active {
-        @media (max-width: $md3+px) {
-          display: inline;
-          margin: 0 0 0 6px;
-        }
-      }
-    }
-    &.active {
-      @media (max-width: $md3+px) {
-        display: inline;
-      }
-    }
-  }
-  &__tel {
-    color: #5a5a5a;
-    line-height: 24px;
-    background: url(../assets/icons/04.svg) left no-repeat;
-    padding: 0 0 0 20px;
-    @include anim(0.3s, 0s);
-    &:hover {
-      @include anim(0.3s, 0s);
-      color: #46b7d3;
-    }
-    @media (max-width: $md3+px) {
-      display: block;
-      margin: 0 0 30px 0;
-    }
-    span {
-      @media (max-width: 1030px) {
-        display: none;
-      }
-      &.active {
-        @media (max-width: $md3+px) {
-          display: block;
-          margin: 0 0 0 5px;
-        }
-      }
-    }
-  }
-  &__bottom {
-    display: flex;
-    justify-content: space-between;
-    @media (max-width: 1030px) {
-      justify-content: flex-end;
-    }
-  }
-  &__language {
-    font-family: "Century Gothic";
-    height: 24px;
-    color: #5a5a5a;
-    line-height: 24px;
-    appearance: none;
-    background-color: inherit;
-    margin: 0 0 0 10px;
-    letter-spacing: 1px;
-    border-bottom: 2px dashed #46b7d3;
-    cursor: pointer;
-    @include anim(0.3s, 0s);
-    &:hover {
-      @include anim(0.3s, 0s);
-      color: #46b7d3;
-    }
-    &.active {
-      display: none;
-      @media (max-width: $md3+px) {
-        display: block;
-      }
-    }
-  }
-}
-.networks {
-  display: flex;
-  align-items: center;
-  &.active {
-    @media (max-width: $md3+px) {
-      display: inline-block;
-    }
-  }
-  &__text {
-    text-transform: uppercase;
-    font-size: 13px;
-    color: #020202;
-    margin: 0 15px 0 0;
-
-    @media (max-width: $md2+px) {
-      display: none;
-    }
-    &.active {
-      @media (max-width: $md3+px) {
-        display: inline-block;
-      }
-    }
-  }
-  &__vk {
-    margin: 0 13px 0 0;
-    display: flex;
-  }
-}
-
-// <МОДАЛЬНЫЕ ОКНА>========================================
-.modal-window {
-  display: none;
-  max-width: 560px;
-  width: 100%;
-  height: 396px;
-  &__title {
-    font-size: 30px;
-    font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 3px;
-    margin: 0 0 35px 0;
-    @media (max-width: 580px) {
-      font-size: 20px;
-      margin: 0 0 15px 0;
-    }
-  }
-  &__text {
-    font-size: 14px;
-    margin: 0 0 10px 0;
-    @media (max-width: 580px) {
-      font-size: 12px;
-      margin: 0 0 5px 0;
-    }
-  }
-  &_thx {
-    height: 530px;
-    padding-bottom: 0;
-    div {
-      background: url(../assets/images/header/03.png) no-repeat;
-      background-size: 80%;
-      height: 300px;
-    }
-    &__text {
-      line-height: 20px;
-      margin: 0 0 20px 0;
-    }
-  }
-  &__img-heart {
-    display: block;
-    margin: 0 auto;
-    width: 100%;
-    max-width: 250px;
-  }
-  &__confidential {
-    font-size: 10px;
-    color: #878787;
-    background: url(../assets/icons/09.svg) left top no-repeat;
-    background-size: 30px 30px;
-    padding: 0 0 0 40px;
-    margin: 0px 0px 30px -5px;
-  }
-  &__call {
-    max-width: 449px;
-    text-align: center;
-    width: 100%;
-    height: 73px;
-    box-shadow: 0 10px 15px rgba(3, 43, 56, 0.05);
-    background-color: #019ec4;
-    margin: 0 auto;
-    display: block;
-    color: #ffffff;
-    font-size: 24px;
-    font-weight: 700;
-    @include anim(0.3s, 0s);
-    &:hover {
-      @include anim(0.3s, 0s);
-      background-color: #fff;
-      color: #019ec4;
-      border: 1px solid #019ec4;
-    }
-  }
-}
-.forms {
-  display: flex;
-  justify-content: space-between;
-  @media (max-width: 480px) {
-    height: 50px;
-  }
-  &__tel {
-    width: 290px;
-    height: 78px;
-    color: #848484;
-    font-size: 10px;
-    margin: 0 5px 0 0;
-    span {
-      margin: 0px 11px 0 0px;
-    }
-    @media (max-width: 580px) {
-      width: 200px;
-    }
-    @media (max-width: 480px) {
-      width: 120px;
-    }
-  }
-  &__text {
-    display: flex;
-    flex-direction: column;
-    margin: 21px 0 0 0px;
-    padding: 5px 0 5px 5px;
-    border: 1px solid #fff;
-    &.error {
-      border: 1px solid red;
-    }
-    span {
-      margin: 0px 11px 0 0px;
-    }
-    @media (max-width: 580px) {
-      margin: 0;
-    }
-  }
-  &__number {
-    color: #000000;
-    font-size: 21px;
-    @media (max-width: 580px) {
-      font-size: 16px;
-    }
-    @media (max-width: 480px) {
-      font-size: 14px;
-    }
-  }
-  &__person {
-    width: 290px;
-    height: 78px;
-    color: #848484;
-    font-size: 10px;
-    margin: 0 0 0 5px;
-    @media (max-width: 580px) {
-      width: 200px;
-    }
-    @media (max-width: 480px) {
-      width: 120px;
-    }
-  }
-  &__name {
-    font-size: 21px;
-    @media (max-width: 580px) {
-      font-size: 16px;
-    }
-    @media (max-width: 480px) {
-      font-size: 14px;
-    }
-  }
-}
-
-// <//МОДАЛЬНЫЕ ОКНА>===========================================
-
-.header-bottom {
-  display: flex;
-  align-items: center;
-  height: 56px;
-  max-width: 1395px;
-  padding: 0 12px;
-  margin: 0 auto;
-  width: 100%;
-  @media (max-width: $md3+px) {
-    height: 43px;
-    justify-content: flex-end;
-  }
-}
-.nav {
-  width: 100%;
-  &__list {
-    display: flex;
-    justify-content: space-between;
-    margin: 0 0 0 95px;
-    max-width: 1277px;
-    @media (max-width: $md3+px) {
-      margin: 0;
-    }
-  }
-  &__item {
-    text-transform: uppercase;
-    font-size: 16px;
-    @include anim(0.3s, 0s);
-    &:hover {
-      @include anim(0.3s, 0s);
-      color: #019ec4;
-    }
-    @media (max-width: $md2+px) {
-      font-size: 14px;
-    }
-    @media (max-width: 1030px) {
-      font-size: 12px;
-    }
-    @media (max-width: $md3+px) {
-      font-size: 16px;
-    }
-  }
-}
-
-.menu {
-  display: none;
-  @media (max-width: $md3+px) {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 12px;
-  }
-  &__title {
-    color: #707070;
-    @media (max-width: $md4+px) {
-      font-size: 10px;
-    }
-  }
-}
-.menu-header {
-  &__icon {
-    display: none;
-    width: 16px;
-    height: 9px;
-    margin: 0 5px 0 0;
-    cursor: pointer;
-    z-index: 1;
-    position: relative;
-    span {
-      @include anim(0.3s, 0s);
-      top: 8px;
-      left: 0;
-      position: absolute;
-      width: 100%;
-      height: 1px;
-      background-color: #707070;
-      &:first-child {
-        top: 0;
-      }
-      &:nth-child(2) {
-        top: 4px;
-      }
-      &:last-child {
-        top: auto;
-        bottom: 0;
-      }
-    }
-    @media (max-width: $md3+px) {
-      display: block;
-    }
-  }
-  &__menu {
-    @media (max-width: $md3+px) {
-      position: fixed;
-      width: 100%;
-      height: 100%;
-      top: 0;
-      right: -110%;
-      background-color: #fff;
-      z-index: 2;
-      padding: 50px 24px 20px 24px;
-      overflow: auto;
-      @include anim(0.3s, 0s);
-      &.active {
-        right: 0;
-      }
-    }
-  }
-  &__list {
-    @include flexbox();
-    li {
-      @media (max-width: $md3+px) {
-        margin: 0 0 20px 0;
-        &:last-child {
-          margin: 0 0 30px 0;
-        }
-      }
-    }
-    @media (max-width: $md3+px) {
-      display: block;
-    }
-  }
-  &__link {
-    color: #646667;
-    font-size: 12px;
-    font-weight: 700;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    display: block;
-    @include anim(0.3s, 0s);
-    position: relative;
-    span {
-      position: relative;
-      display: block;
-      line-height: 28px;
-      &:after {
-        content: "";
-        position: absolute;
-        left: 50%;
-        width: 0;
-        height: 1px;
-        background-color: #007397;
-        bottom: 0;
-        @include anim(0.3s, 0s);
-      }
-    }
-    @media (max-width: $md2+px) {
-      font-size: 11px;
-    }
-    @media (max-width: $md3+px) {
-      font-size: 14px;
-    }
-  }
-}
-
-.close {
-  position: absolute;
-  right: 18px;
-  top: 31px;
-  span {
-    @include scale(0);
-    &:first-child {
-      @include rotate(-45deg);
-    }
-    &:last-child {
-      @include rotate(45deg);
-      bottom: 8px;
-    }
-  }
-}
-
-// </HEADER>
-
-// <MAIN>
-
-.main {
-  height: 520px;
-  background: url(../assets/images/main/03.jpg) no-repeat center;
-  background-size: cover;
-  display: flex;
-  position: relative;
-
-  &__img-left {
-    position: absolute;
-    z-index: 0;
-    @media (max-width: $md3+px) {
-      display: none;
-    }
-  }
-  &__img-right {
-    position: absolute;
-    right: 91px;
-    z-index: 1;
-    @media (max-width: 1280px) {
-      display: none;
-    }
-  }
-}
-.info {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 710px;
-  max-width: 100%;
-  margin: 0 auto;
-  padding: 0 6px 0;
-  height: 520px;
-  max-height: 100%;
-  @media (max-width: $md3+px) {
-    height: 466px;
-  }
-  &__container {
-    max-width: 710px;
-    width: 100%;
-    margin: 0 auto;
-    z-index: 5;
-  }
-  &__title {
-    color: #019ec4;
-    font-family: "Century Gothic";
-    font-size: 56px;
-    text-transform: uppercase;
-    margin: 0 0 45px 0;
-    text-align: center;
-    letter-spacing: 5.6px;
-    @media (max-width: $md3+px) {
-      font-size: 48px;
-    }
-    @media (max-width: $md4+px) {
-      font-size: 36px;
-    }
-  }
-  &__text {
-    font-size: 18px;
-
-    text-align: center;
-    line-height: 30px;
-    @media (max-width: $md3+px) {
-      font-size: 16px;
-    }
-    @media (max-width: $md4+px) {
-      font-size: 14px;
-    }
-  }
-}
-
-// <//MAIN>
+@import "template.scss";
+@import "header.scss";
+@import "main.scss";
